# SHL-assessment-recommendation-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FINAL_EVALUATION_REPORT.md  FINAL_SUBMISSION_AUDIT.md  FINAL_SUBMISSION_REPORT.md  LICENSE  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  catalog_matcher.py  catalog_validator.py  comparison.py  comparison_models.py  conversation_advisor.py  conversation_models.py  generation.py  generation_client.py  generation_models.py  llm_client.py  prompt_builder.py  prompt_models.py  prompt_templates.py  query_builder.py  query_expansion.py  query_models.py  response_builder.py  response_catalog.py  response_models.py  router.py  routing_models.py  state_extraction.py  validator.py  validator_models.py
api/: __init__.py
app/: api.py  dependencies.py  main.py  schemas.py
benchmark/: baseline_results.json  build_benchmark.py  check_hallucinations.py  compare_results.py  deep_audit_analysis.py  deep_audit_output.txt  diganose_queries.py  extend_benchmark.py  full_coverage_benchmark.json  full_coverage_benchmark.py  generate_audit_report.py  generate_stress_queries.py  pipeline_baseline.json  pipeline_improved.json  retrieval_benchmark.json  review_baseline.py  run_benchmark.py  run_full_audit.py  run_pipeline_benchmark.py  stress_benchmark.json
catalog/: __init__.py  catalog.json  cleaner.py  constants.py  exporter.py  loader.py  models.py  normalizer.py  validator.py
config/: __init__.py  logging_config.py  settings.py
(+184 files in other folders)
