[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shl-assessment-recommendation-agent"
version = "0.1.0"
description = "Deterministic RAG backend foundation for SHL Individual Test Solutions recommendations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "SHL Assessment Recommendation Team" }
]
dependencies = [
  "fastapi==0.115.2",
  "uvicorn==0.32.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.0",
  "python-dotenv==1.0.1",
  "rank-bm25==0.2.2",
  "sentence-transformers==3.2.1",
  "faiss-cpu==1.9.0.post1",
  "rapidfuzz==3.10.1",
  "pandas==2.2.3",
  "numpy==1.26.4",
  "httpx==0.27.2"
]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = [".venv", "venv", "build", "dist"]